--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             </p>
           </div>
           <div class="form" name="form">
-              <input type="text" value="Email Address" name="email"/>
-              <button class="btn btn-submit">
+              <input id="email" type="text" value="Email Address" name="email"/>
+              <button class="btn btn-submit" id="submit">
                 <img src="images/icon-arrow.svg" alt="" />
               </button>
             <div class="error inv">
