--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           <div class="logo">
             <img src="images/logo.svg" alt="Base Apparel Logo" />
           </div>
+          <div class="hero-mobile"></div>
           <div class="title">
             <h1><span>We're</span> Coming Soon</h1>
           </div>
@@ -26,17 +27,15 @@
             </p>
           </div>
           <div class="form" name="form">
-              <input id="email" type="text" value="Email Address" name="email"/>
-              <button class="btn btn-submit" id="submit">
-                <img src="images/icon-arrow.svg" alt="" />
-              </button>
+            <input id="email" type="text" value="Email Address" name="email" />
+            <button class="btn btn-submit" id="submit">
+              <img src="images/icon-arrow.svg" alt="" />
+            </button>
             <div class="error inv">
-              <img src="images/icon-error.svg" alt="">
+              <img src="images/icon-error.svg" alt="" />
             </div>
             <div class="validation inv">
-              <p>
-                Please provide a valid email
-              </p>
+              <p>Please provide a valid email</p>
             </div>
           </div>
         </div>
